--- a/f/package.json
+++ b/f/package.json
@@ -20,6 +20,7 @@
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0",
+    "stripe": "^19.2.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
