--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "b/server.js",
   "type": "module",
   "scripts": {
-    "dev":"nodemon/b/server.js",
+    "dev": "nodemon/b/server.js",
     "start": "node/b/server.js"
   },
   "keywords": [
@@ -18,6 +18,7 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "ioredis": "^5.8.1",
