--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,36 @@
-# Node modules
 node_modules/
 
-# Environment variables
 .env
+.env.local
+.env.development.local
+.env.production.local
 
-# Logs
+
+logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-logs/
+pnpm-debug.log*
 
-# Build artifacts
+
 build/
 dist/
 out/
+.next/
+.vercel/
 
-# IDE and OS files
+
 .vscode/
+.idea/
 .DS_Store
+Thumbs.db
 
-# Test coverage
+
 coverage/
 
-# Misc
+
 *.tgz
+*.log
+*.cache/
+.tmp/
+
